Adds  HTML Paragraph

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <p>This is a simple webpage to demonstrate Git operations.</p>
 
       <p>We'll make changes to this file throughout our session.</p>
+      <p>Feature of new paragraph of linne.</p>
+
     </div>
   </body>
 </html>
